@startuml

title __PARAMETERS's Class Diagram__\n

  package parameters {
    class Client {
        {static} - serialVersionUID : long
        - accountNumber : String
        - name : String
        - password : char[]
        - clientID : String
        {static} - publicKey : PublicKey
        + Client()
        + getName()
        + getPassword()
        + getClientID()
        {static} + getPublicKey()
        + setPublicKey()
        + getAccountNumber()
        + getPrivateKey()
        + setPrivateKey()
        + getPointOfClientPartialKey()
        + setPointOfClientPartialKey()
        + getPointOfBankPartialKey()
        + setPointOfBankPartialKey()
        + Client()
        + Client()
    }
  }
  

  package parameters {
    class PrivateKey {
        {static} - serialVersionUID : long
        - xCoordinates : BigInteger
        - yCoordinate : BigInteger
        + getXCoordinates()
        + getYCoordinate()
        + toString()
        + PrivateKey()
        + equal()
    }
  }
  

  package parameters {
    class PublicKey {
        {static} - serialVersionUID : long
        + getXCoordinates()
        + getYCoordinate()
        + toString()
        + PublicKey()
        + equal()
    }
  }
  

  package parameters {
    class publicParameters {
        {static} - serialVersionUID : long
        - order : BigInteger
        - bankID : String
        - bankAddress : InetAddress
        - bankPort : int
        + publicParameters()
        + getCurve()
        + getBasePoint()
        + getOrder()
        + getKgcPublic()
        + getBankID()
        + getBankAddress()
        + getBankPort()
        + getBankPublicKey()
        + toString()
        + publicParameters()
        + setCurve()
        + setBasePoint()
        + setOrder()
        + setKgcPublic()
        + setBankID()
        + setBankAddress()
        + setBankPort()
        + setBankPublicKey()
        + equal()
    }
  }
  

  Client -up-|> Serializable
  Client o-- ECPoint : pointOfClientPartialKey
  Client o-- ECPoint : pointOfBankPartialKey
  Client o-- PrivateKey : privateKey
  PrivateKey -up-|> Serializable
  PublicKey -up-|> Serializable
  PublicKey o-- ECPoint : xCoordinates
  PublicKey o-- ECPoint : yCoordinate
  publicParameters -up-|> Serializable
  publicParameters o-- EllipticCurve : curve
  publicParameters o-- ECPoint : basePoint
  publicParameters o-- ECPoint : kgcPublic
  publicParameters o-- PublicKey : bankPublicKey


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
